2008-11-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (check_file_done), (try_check_file),
	(prepare_screenshot), (get_desktop_dir):
	Always use URIs to build the GFile when checking for existance.
	Don't show an error message when the file-chooser can't find the
	parent directory of the last saved position. (#321944).

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (main):
	Only delay the screenshot when in interactive mode (#554114).

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (save_callback):
	Fixed a typo in a string (#551440).

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (try_check_file):
	Don't free NULL errors, as it makes a warning.

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (finish_prepare_screenshot):
	Simplify the code a bit. Thanks to Paolo Borelli.

2008-11-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (finish_prepare_screenshot):
	Don't try to include the window border when doing fullscreen
	captures (#559532).

2008-11-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: update to the new configure pkg-config checks
	(part of #557262).

2008-10-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* gnome-screenshot.c: (display_help), (create_screenshot_frame),
	(load_options), (main):
	Drop libgnomeui dependency (#557169).

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	* gnome-screenshot.c:
	(load_options), (save_options): Remove the code that loads/saves
	the take_window_shot GConf key.
	
	(main): Mark the -B switch description as translatable.

	* gnome-screenshot.schemas.in: Deprecate the take_window_shot key.

2008-10-20  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 553085 – After doing gnome-screenshot -w (grab a window), "grab the entire
	screen" works to grab a window.

	* gnome-screenshot.c:
	(load_options), (save_options): Ignore the take_window_shot GConf key