@@ -1,5 +1,10 @@
 2008-11-09  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* gnome-screenshot.ui: move the "Copy to Clipboard" button on
+	the left of the "Cancel" one, as for HIG (#554805).
+
+2008-11-09  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* gnome-screenshot.c: (check_file_done), (try_check_file),
 	(prepare_screenshot), (get_desktop_dir):
 	Always use URIs to build the GFile when checking for existance.
